<resources>
    <string name="app_name">App Prueba Tecnica Tekus</string>
    <string name="action_settings">Settings</string>
    <string name="lblWelcome">Bienvenido</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnExit">Salir</string>
    <string name="btnAdministrationNotification">Administrar Notificaciones</string>
    <string name="btnDetectMovement">Detectar Movimiento</string>
    <string name="btnReturn">Volver</string>
    <string name="btnRefresh">Refrescar</string>
    <string name="lblInformation">Información</string>
    <string name="lblDescriptionInformation">Señor usuario, en este momento se comenzará a detectar los movimientos de los activos de la empresa</string>
    <string name="lblVersion">Versión 1.0</string>
</resources>
