<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.apppruebatecnicatekus.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_centerVertical="true">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblWelcome"
                    android:id="@+id/textView25"
                    android:textColor="#2E2EFE"
                    android:textStyle="bold|italic"
                    android:typeface="sans"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp" />



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logotekus"/>

                <Button
                    android:id="@+id/btnLogin"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btnLogin"
                    android:onClick="Login"/>
                <Button
                    android:id="@+id/btnExit"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorRed"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btnExit"
                    android:onClick="Exit"/>

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblVersion"/>

            </LinearLayout>




        </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>