<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.apppruebatecnicatekus.MenuActivity">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Button
              android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lisst"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:onClick="FindNotifications"
                android:text="@string/btnAdministrationNotification" />

            <Button
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/calculate"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:onClick="DetectMovement"
                android:text="@string/btnDetectMovement" />


            <Button
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/exit"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:text="@string/btnExit"
                android:onClick="Exit"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
